adicionar funcionalidade de remover paciente

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
+		
 
 	</head>
 	<body>
@@ -35,6 +37,7 @@
 							<td class="info-altura">2.00</td>
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
+							<td><i class="fas fa-times"></i></td>
 						</tr>
 
 						<tr class="paciente" >
@@ -43,6 +46,7 @@
 							<td class="info-altura">1.72</td>
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
+							<td><i class="fas fa-times"></i></td>
 						</tr>
 
 						<tr class="paciente" >
@@ -51,6 +55,7 @@
 							<td class="info-altura">1.64</td>
 							<td class="info-gordura">14</td>
 							<td class="info-imc">0</td>
+							<td><i class="fas fa-times"></i></td>
 						</tr>
 
 						<tr class="paciente">
@@ -59,6 +64,7 @@
 							<td class="info-altura">1.73</td>
 							<td class="info-gordura">24</td>
 							<td class="info-imc">0</td>
+							<td><i class="fas fa-times"></i></td>
 						</tr>
 						<tr class="paciente" >
 							<td class="info-nome">Tatiana</td>
@@ -66,6 +72,7 @@
 							<td class="info-altura">1.55</td>
 							<td class="info-gordura">19</td>
 							<td class="info-imc">0</td>
+							<td><i class="fas fa-times"></i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -99,6 +106,7 @@
 
 		<script src="js/calcula-imc.js" ></script>
 		<script src="js/form.js" ></script>
+		<script src="js/remover-paciente.js" ></script>
 
 	</body>
 </html>
